NotificationTaskServiceImpl.parseMessage now use Pair class instead of List;